--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-03 22:57:17
+* @Last Modified time: 2017-01-04 01:39:01
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -17,10 +17,20 @@
     left:0;top:0;
     z-index: 100;
 }
+.ld_sqtopbar_di{
+    width:100%;height:.88rem;
+}
 .ld_sq_photo{
     width:.76rem;height:.76rem;
     border-radius:50%;
     overflow:hidden;
+}
+.ld_sq_dian{
+    display:block;
+    width:.06rem;height:.06rem;
+    background:#FD1C42;
+    position:absolute;
+    left:1rem;height:0;
 }
 .ld_sq_photo a{
     display:block;
@@ -92,12 +102,13 @@
 /*社区圈子开始*/
 .ld_qz_condi{
     width:100%;
-    padding:1.32rem .24rem;
+    padding:0 .24rem;
     padding-bottom:1rem;
     box-sizing: border-box;
 }
 .ld_qz_con{
-    width:100%;height:4.29rem;
+    width:100%;
+    /*height:4.29rem;*/
     background:#fff;
     border-radius:.15rem;
     margin-bottom:.13rem;
@@ -152,6 +163,7 @@ li.ld_qz_labelzan{
 }
 .ld_qz_conbtm{
     padding:0 .25rem;
+    /*overflow:hidden;*/
 }
 .ld_qz_tit{
     width:100%;height:.6rem;
@@ -170,12 +182,14 @@ li.ld_qz_labelzan{
     color:#666;
 }
 .ld_qz_dizhi{
-    width:100%;height:.52rem;
-    padding-top:.15rem;
+    width:100%;
+    /*height:.52rem;*/
+    padding:.15rem 0;
+    overflow:hidden;
 }
 .ld_dizhi_icon{
     float:left;
-    width:.3rem;height:100%;
+    width:.3rem;height:.37rem;
     background:url(../../images/ld_images/zlf_dizhi.png) center center no-repeat;
     background-size:100% auto;
 }
@@ -286,7 +300,6 @@ span.ld_sy_circle2{
 .ld_sy_num{
     float:right;
     width:.31rem;height:.31rem;
-    text-align:center;line-height: .31rem;
     border-radius:50%;
     background:#f0f0f0;
     border:1px solid #d5d5d5;
@@ -295,11 +308,12 @@ span.ld_sy_circle2{
 }
 .ld_sy_num a{
     display:block;
+    width:100%;height:100%;
+    text-align:center;line-height: .26rem;
     color:#6f6f6f;
 }
 .ld_sy_numactive{
     width:.73rem;height:.41rem;
-    text-align:center;line-height: .41rem;
     border-radius:.5rem;
     background:#ff3469;
     color:#fff;
@@ -307,6 +321,7 @@ span.ld_sy_circle2{
 }
 .ld_sy_numactive a{
     color:#fff;
+    text-align:center;line-height: .41rem;
 }
 /*搜索*/
 .ld_sy_search{
