--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -187,14 +187,16 @@
 /*书架-收藏*/
 .zlf_book_box{
     width:100%;
-    margin-top:.4rem;
+    /*margin-top:.8rem;*/
     display: flex;
     justify-content: space-between;
+    flex-wrap:wrap;
 }
 .zlf_book_item{
     display:block;
     width:2.25rem;
     height:auto;
+    margin-top:.8rem;
     background:#fff;
     border-radius: .1rem;
 }
