--- a/pages/search/search.css
+++ b/pages/search/search.css
@@ -1,4 +1,45 @@
+body{
+    background: #eaeaea;
+}
+/*固定*/
+    .sy_fix{
+    	width: 100%;height: 0.88rem;
+    	position: fixed;
+    	left: 0;top: 0;
+    	background: rgba(255,255,255,1);
+    	display: flex;
+    	justify-content:space-between;
+    	z-index: 100000;
+    }
+    .sy_fslide{
+    	width: 1.1rem;height: 100%;
+    }
+    .sy_fslide:nth-child(1){
+        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
+    }
+    .sy_fslide:nth-last-child(1){
+        background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
+    }
+    .sy_fcenter{
+    	height: 100%;flex-grow:1;
+    	font-size: 0.36rem;
+    	color: #333;
+    	line-height: 0.88rem;
+    	text-align: center;
+    }
+    .sy_fcenter b{
+    	font-size: 0.36rem;
+    	color: #333;
+    }
+/*留白块*/
+    .sy_empty{
+        width: 100%;height: 0.9rem;
+    }
 /*搜索*/
+    .ld_qz_condi{
+        width: 7.02rem;
+        margin: 0.3rem auto 0.5rem auto;
+    }
     .ld_search{
         height:0;
         margin: 0 auto;
@@ -42,53 +83,268 @@
         color:#fff;
         background:transparent;
     }
-/*筛选*/
-    .sy_filterul{
-        width: 7.02rem;height: 0.8rem;
-        margin: 0.15rem auto;
-        display: flex;
-        justify-content:space-around;
-        padding: 0 0.5rem;
-        box-sizing:border-box;
-        transition:all .35s;
-        overflow:hidden;
+/*订单部分*/
+    .sy_fcaption{
+        width: 7.02rem;height: 0.9rem;
+        margin: 0 auto;
     }
-    .sy_filterlis{
-        width: 1.12rem;height: 100%;
-        background: #eaeaea;
+    .sy_sy-bt{
+        width:100%;
+        position:relative;
     }
-    .sy_fcircle_box{
-        width: 0.2rem;height: 0.2rem;
-        margin: 0.3rem 0.1rem;
-        box-shadow: 0 0 0.05rem #333;
-        position: relative;
-        border-radius: 50%;
+    .sy_sy-bty{
+        color:#4b4c4c;
+        font-size: .24rem;
+        text-transform: uppercase;
+    }
+    .sy_su-div{
+        height: 0.5rem;
+    }
+    .sy_su-btt{
+        width:.6rem;
+        height:.5rem;
+        float: left;
+    }
+    .sy_sy-bth{
+        height: .5rem;
+        color:#333;
+        font-size: .34rem;
+        margin-left: 0.03rem;
+        line-height: .5rem;
+        display: block;
+        float: left;
+    }
+
+    .sy_line_ul{
+        width: 7.02rem;height: auto;
+        margin: 0.2rem auto;
         background: #fff;
+        padding-bottom: 0.5rem;
+        border-radius: 0.1rem;
+        box-shadow: 0 0 0.05rem rgba(0,0,0,0.2);
+    }
+    .sy_line_li{
+        width: 7.02rem;height: 1.75rem;
+        margin: 0.1rem 0;
+        background: #fff;
+        border-radius: 0.05rem;
+        padding: 0.1rem;
+        box-sizing:border-box;
+        display: flex;
+        position: relative;
+    }
+    .sy_lines_left{
+        width: 1.26rem;height: 100%;
+        border: 0.03rem solid #E6E4E5;
+        box-sizing:border-box;
         float: left;
     }
-    .sy_fcircle{
-        width: 0.1rem;height: 0.1rem;
-        position: absolute;
-        left: 0;top: 0;bottom: 0;right: 0;
-        margin: auto;
-        border-radius: 50%;
+    .sy_line_lt{
+        width: 0.28rem;height: 0.32rem;
+        background: linear-gradient(to right bottom,#fff 0,#fff 50%,#E6E4E5 50%,#E6E4E5 100%);
+        margin-top: -0.03rem;
+        margin-left: -0.03rem;
     }
-    .sy_filterlis:nth-child(1) .sy_fcircle.active{
-        background: #87F33D;
+    .sy_lines_conbox{
+        flex-grow:1;
+        padding: 0.1rem 0.2rem;
+        box-sizing:border-box;
     }
-    .sy_fcon{
-        height: 0.55rem;
-        float: left;
-        margin: 0.13rem 0;
+    .sy_lines_right{
+        width: 1.5rem;height: 100%;
+        float: right;
+        position: relative;
     }
-    .sy_fcon p{
-        font-style: 0.34rem;
+  /*内容区域*/
+    .sy_lines_contop{
+        overflow: hidden;
+    }
+    .sy_lines_contop p{
+        font-size: 0.30rem;
         color: #333;
     }
-    .sy_fcon span{
-        font-size: 0.18rem;
-        color: #999;
-        text-transform: uppercase;
+    .sy_lines_english{
+        overflow: hidden;
+    }
+    .sy_lines_english span{
+        font-size: 0.2rem;
+        color: #000;
         display: block;
         margin-top: -0.03rem;
+        text-transform: uppercase;
+        float: left;
+    }
+    .sy_line_enright{
+        width: 0.85rem;height: 0.05rem;
+        background: red;
+        float: left;
+        margin-top: 0.05rem;
+        margin-left: 0.05rem;
+    }
+    .sy_lines_conbottom{
+        margin-top: 0.2rem;
+    }
+    .sy_line_constars{
+        width: 1.4rem;height: 0.2rem;
+        background: yellow;
+    }
+  /*右边区域*/
+    .sy_liright_option{
+        width: auto;height: 0.35rem;
+        padding: 0 0.2rem;
+        border-radius: 0.35rem;
+        background: #2975FF;
+        color: #fff;
+        text-align: center;
+        line-height: 0.35rem;
+        float: left;
+        margin: 0.3rem 0.1rem;
+    }
+    .sy_liright_money{
+        width: 0.58rem;height: 0.52rem;
+        float: left;
+        margin-top: 0;
+        position: absolute;
+        bottom: 0.2rem;
+        box-sizing:border-box;
+    }
+    .sy_liright_money img{
+        width: 100%;
+        position: absolute;
+        left: 0;top: 0;right: 0;bottom: 0;
+        margin: auto;
+    }
+
+    .sy_line_border{
+        width: 5.4rem;height: 0.01rem;
+        background: #DBD9DA;
+        position: absolute;
+        left: 0.81rem;bottom: -0.01rem;
+    }
+/*支付*/
+    .sy_paybox{
+        width: 7.02rem;height: 1rem;
+        margin: 0.3rem auto;
+        display: flex;
+        padding: 0.1rem;
+        box-sizing:border-box;
+    }
+    .sy_pay_left{
+        width: auto;height: 100%;
+        padding: 0.15rem 0;
+        box-sizing:border-box;
+        margin-right: 0.2rem;
+    }
+    .sy_pay_left p{
+        font-size: 0.24rem;
+        color: #333;
+    }
+    .sy_pay_left span{
+        font-size: 0.15rem;
+        color: #999;
+        display: block;
+        margin-top: -0.03rem;
+        text-transform: uppercase;
+    }
+    .sy_pay_span{
+        font-size: 0.7rem;
+        color: #FE7A28;
+        line-height: 0.8rem;
+    }
+    .sy_pay_discount{
+        width: 0.8rem;height: 0.6rem;
+        margin-left: 0.1rem;
+        margin-top: 0.16rem;
+        text-align: center;
+    }
+    .sy_pay_discount p{
+        font-size: 0.23rem;
+        color: #999;
+    }
+    .sy_pay_img{
+        width: 0.8rem;height: 0.3rem;
+        border-radius: 0.3rem;
+        background: #FF1653;
+        line-height: 0.3rem;
+        text-align: center;
+    }
+    .sy_pay_img i{
+        font-size: 0.18rem;
+        color: #fff;
+    }
+
+  /**/
+    .sy_pay_things{
+        width: 7.02rem;height: 0.25rem;
+        margin: 0 auto;
+        line-height: 0.25rem;
+        color: #999;
+    }
+    .sy_pay_things_left{
+        width: 0.2rem;height: 100%;
+        float: left;
+        margin: 0 0.05rem;
+        display: flex;
+        justify-content:space-between;
+    }
+    .sy_pay_circle{
+        width: 0.08rem;height: 0.08rem;
+        border-radius: 50%;
+        margin-top: 0.08rem;
+    }
+    .sy_pay_circle:nth-child(1){
+        margin-right: 0.02rem;
+        background: #FFB636;
+    }
+    .sy_pay_circle:nth-child(2){
+        background: #55B223;
+    }
+    .sy_pay_things span{
+        color: #FD3035;
+    }
+/*确认*/
+    .sy_quit{
+        width: 6.8rem;height: 1rem;
+        margin: 0.6rem auto;
+        background: #2975FF;
+        text-align: center;
+        overflow: hidden;
+        border-radius: 0.05rem;
+    }
+    .sy_hquit{
+        width: 1.6rem;height: 100%;
+        margin: 0.09rem auto;
+    }
+    .sy_hquit p{
+        font-size: 0.34rem;
+        color: #fff;
+        font-weight: normal;
+    }
+    .sy_hquit span{
+        font-size: 0.24rem;
+        color: #999;
+        text-transform: uppercase;
+        margin-top: -0.02rem;
+        display: block;
+    }
+    .sy_qborder{
+        width: 100%;height: 0.05rem;
+    }
+    .sy_qborder:before{
+        content: "";
+        display: block;
+        float: left;
+        width: 0.14rem;height: 100%;
+        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
+    }
+    .sy_qborder:after{
+        content: "";
+        display: block;
+        float: right;
+        width: 0.14rem;height: 100%;
+        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
+    }
+    .sy_bbottom{
+        width: 100%;height: 1rem;
+        background: yellow;
     }
