--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-04 01:39:01
+* @Last Modified time: 2017-01-04 15:52:52
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -97,8 +97,105 @@
     background:url(../../images/ld_images/ld_top_fangda.png) center center no-repeat;
     background-size:100% auto;
 }
+.ld_sq_rig a{
+    display:block;
+    width:100%;height:100%;
+}
 /*社区顶部结束*/
-
+/*搜索*/
+    .ld_search{
+        height:0;
+        margin: 0 auto;
+        padding:.24rem 0;
+        transition: all .3s;
+        overflow: hidden;
+        transform:scale(0);
+    }
+    .ld_searchactive{
+        transform:scale(1, 1);
+        height:2.35rem;
+    }
+    .sy_qz_condi{
+        width: 7.02rem;height:auto;
+        margin: 0 auto;
+    }
+    .ld_sy_search{
+        width:100%;height:.92rem;
+        background:url(../../images/ld_images/ld_sy_input.png) 0 center no-repeat;
+        background-size:100%;
+        display:flex;
+        align-items: center;
+        margin-top:0;
+    }
+    .ld_sy_search input{
+        width:5.29rem;height:80%;
+        border:0;outline:none;
+        font-size:.24rem;
+        color:#fff;
+        background:transparent;
+        padding-left:.8rem;
+        box-sizing: border-box;
+    }
+    .ld_sy_search input[placeholder]{
+        color: #fff!important;
+    }
+    .ld_sy_btn{
+        width:1rem;height:.92rem;
+        text-indent: .8rem;
+        font-size:.24rem;
+        color:#fff;
+        background:transparent;
+    }
+/*筛选*/
+.sy_filterul{
+    width: 7.02rem;height: 0.8rem;
+    margin: 0.15rem auto;
+    display: flex;
+    justify-content:space-around;
+    padding: 0 0.5rem;
+    box-sizing:border-box;
+    transition:all .35s;
+    overflow:hidden;
+}
+.sy_filterlis{
+    width: 1.12rem;height: 100%;
+    background: #eaeaea;
+}
+.sy_fcircle_box{
+    width: 0.2rem;height: 0.2rem;
+    margin: 0.3rem 0.1rem;
+    box-shadow: 0 0 0.05rem #333;
+    position: relative;
+    border-radius: 50%;
+    background: #fff;
+    float: left;
+}
+.sy_fcircle{
+    width: 0.1rem;height: 0.1rem;
+    position: absolute;
+    left: 0;top: 0;bottom: 0;right: 0;
+    margin: auto;
+    border-radius: 50%;
+}
+.sy_filterlis:nth-child(1) .sy_fcircle.active{
+    background: #87F33D;
+}
+.sy_fcon{
+    height: 0.55rem;
+    float: left;
+    margin: 0.13rem 0;
+}
+.sy_fcon p{
+    font-style: 0.34rem;
+    color: #333;
+}
+.sy_fcon span{
+    font-size: 0.18rem;
+    color: #999;
+    text-transform: uppercase;
+    display: block;
+    margin-top: -0.03rem;
+}
 /*社区圈子开始*/
 .ld_qz_condi{
     width:100%;
