--- a/pages/addcard/addcard.css
+++ b/pages/addcard/addcard.css
@@ -12,12 +12,14 @@ body{
         z-index: 100000;
     }
     .sy_fslide{
-        width: 1.1rem;height: 100%;
+        width: 0.7rem;height: 0.6rem;
+        margin: 0.14rem 0.2rem;
+        /*width: 1.1rem;height: 100%;*/
     }
     .sy_fslide:nth-child(1){
-        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
+        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center/cover;
     }
-    .sy_fslide:nth-last-child(1){
+    .sy_fslide:nth-child(3){
         background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
     }
     .sy_fcenter{
@@ -69,7 +71,7 @@ body{
 /*换个签名吧*/
     .sy_addbutton{
         width: 3rem;height: 0.7rem;
-        margin: 0 auto;
+        margin: 0.4rem auto;
         line-height: 0.7rem;
     }
     .sy_addbutton span{
@@ -189,18 +191,20 @@ body{
         margin: 0.15rem auto;
     }
     .sy_inlist{
-        width: 100%;height: 1rem;
+        width: 100%;height: auto;
         background: #fff;
         margin: 0.1rem 0;
         box-shadow: 0 0.01rem 0.05rem rgba(0,0,0,0.3);
         border-radius: 0.1rem;
         padding: 0.2rem 0.1rem;
         box-sizing:border-box;
+        overflow: hidden;
     }
     .sy_inbox{
         width: 5.8rem;height: 100%;
         box-sizing:border-box;
         border-bottom:0.01rem dashed #999;
+        overflow: hidden;
         /*display: flex;
         justify-content:space-between;*/
     }
@@ -237,11 +241,11 @@ body{
         margin-top: -0.05rem;
     }
     .sy_innum{
+        width: 3.5rem;
         height: 100%;
         line-height: 0.5rem;
-        float: left;
+        float: right;
         font-size: 0.28rem;
-        margin-left: 0.2rem;
         color: #666;
     }
 
