--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-04 15:52:52
+* @Last Modified time: 2017-01-04 18:01:50
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -27,10 +27,11 @@
 }
 .ld_sq_dian{
     display:block;
-    width:.06rem;height:.06rem;
+    width:.1rem;height:.1rem;
     background:#FD1C42;
+    border-radius:50%;
     position:absolute;
-    left:1rem;height:0;
+    left:1rem;top:.1rem;
 }
 .ld_sq_photo a{
     display:block;
@@ -400,7 +401,6 @@ span.ld_sy_circle2{
     border-radius:50%;
     background:#f0f0f0;
     border:1px solid #d5d5d5;
-    
     font-size:.22rem;
 }
 .ld_sy_num a{
@@ -478,8 +478,8 @@ span.ld_sy_circle2{
     border-radius:.06rem;
     margin-bottom:.13rem;
     display:flex;
-    align-items: center;
-    justify-content: space-between;
+    /*align-items: center;*/
+    /*justify-content: space-between;*/
     padding:.12rem;
     padding-right:.18rem;
     box-sizing: border-box;
@@ -487,6 +487,7 @@ span.ld_sy_circle2{
     background-size:auto 60%;
 }
 .ld_friend_photo{
+    float:left;
     width:.93rem;height:.99rem;
     background:url(../../images/ld_images/ld_friend01.png) center center no-repeat;
     background-size:100%;
@@ -511,6 +512,7 @@ span.ld_sy_circle2{
     background:red;
 }
 .ld_friend_con{
+    float:left;
     width:4.65rem;height:.87rem;
     background:url(../../images/ld_images/ld_line.png) 0 .3rem no-repeat;
     background-size:50%;
@@ -520,6 +522,11 @@ span.ld_sy_circle2{
     line-height: .35rem;
     color:#717171;
     font-size:.22rem;
+}
+.ld_addfriend_right{
+    float:right;
+    display:flex;
+    align-items: center;
 }
 .ld_friend_zs b,li.ld_friend_zs{
     font-size:.18rem;
