--- a/pages/bookcover/bookcover.css
+++ b/pages/bookcover/bookcover.css
@@ -2,7 +2,7 @@
 /* @Author: guanlin
 * @Date:   2016-12-29 11:54:43
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-03 15:44:34
+* @Last Modified time: 2017-01-04 18:34:26
 */
 
 #gl_warp{
@@ -421,6 +421,10 @@
     background:url(../../images/gl_images/taoxin.png)no-repeat -.4rem;
     background-size: .76rem .36rem;
     margin:-.4rem 1.2rem 0 0;
+}
+.gl_zz a{
+  display:block;
+  width:100%;height:100%;
 }
 .gl_plpl{
     float:right;
