--- a/pages/person/person.css
+++ b/pages/person/person.css
@@ -121,18 +121,21 @@ body{
         position: relative;
     }
     .sy_dist img{
+        height: 100%;
         position: absolute;
         left: 0;top: 0;bottom: 0;right: 0;
         margin: auto;
     }
     .sy_xian_img{
-        width: 100%;height: 0.03rem;
-        margin: 0.12rem 0;
-        background: url(../../images/sy_images/sy_dian.png) no-repeat center;
+        width: 0.41rem;height: 0.03rem;
+        margin: 0.12rem auto;
+        background: url(../../images/sy_images/sy_dian.png) no-repeat center/cover;
     }
     .sy_five{
-        width: 100%;height: 0.4rem;
-        background: url(../../images/sy_images/sy_stars.png) no-repeat center;
+        width: 1.64rem;height: 0.4rem;
+        margin: 0 auto;
+        overflow: hidden;
+        background: url(../../images/sy_images/sy_stars.png) no-repeat center/cover;
     }
 /*友情链接*/
     .sy_help_box{
@@ -150,17 +153,18 @@ body{
         width: auto;
     }
     .sy_htop{
+        width: 100%;
         height: 0.45rem;
         position: relative;
     }
     .sy_htop img{
+        height: 100%;
         position: absolute;
         left: 0;top: 0;right: 0;bottom: 0;
         margin: auto;
     }
     .sy_hbottom{
         height: 0.55rem;
-        overflow: hidden;
         padding: 0 0.05rem;
         box-sizing:border-box;
     }
