--- a/pages/recharge/recharge.css
+++ b/pages/recharge/recharge.css
@@ -145,6 +145,61 @@ body{
         margin-top: 0.08rem;
         margin-left: 0.02rem;
     }
+
+    .sy_rsul{
+        width: 7.02rem;height: auto;
+        margin: 0.2rem auto;
+    }
+    .sy_rsli{
+        width: 100%;height: 1.4rem;
+        margin: 0.1rem 0;
+        display: flex;
+        justify-content:space-between;
+    }
+    .sy_rslist{
+        width: 3.1rem;height: 100%;
+        border:0.01rem solid #fff;
+        box-sizing:border-box;
+        border-radius: 0.1rem;
+        background: url(../../images/sy_images/sy_bg.png) no-repeat right/cover;
+    }
+    .sy_relitop{
+        width: 100%;height: auto;
+        overflow: hidden;
+    }
+    .sy_relibottom{
+        width: 100%;height: auto;
+        overflow: hidden;
+    }
+    .sy_rslist p{
+        font-size: 0.34rem;
+        float: left;
+        color: #666;
+    }
+    .sy_rslist span{
+        text-transform: uppercase;
+        font-size: 0.16rem;
+        margin-top: -0.05rem;
+        float: left;
+        color: #999;
+    }
+    .sy_reliminp{
+        width: 0.3rem;height: 0.05rem;
+        background: #01BC13;
+        border-radius: 0.05rem;
+        float: left;
+        margin-top: 0.35rem;
+        margin-left: 0.02rem;
+    }
+    .sy_relimins{
+        width: 0.4rem;height: 0.05rem;
+        background: #EC9F33;
+        border-radius: 0.05rem;
+        float: left;
+        margin-top: 0.08rem;
+        margin-left: 0.02rem;
+    }
+
 /*温馨提示*/
     .sy_rwalert{
         width: 7.02rem;height: auto;
