--- a/pages/person/person.css
+++ b/pages/person/person.css
@@ -12,12 +12,14 @@ body{
     	z-index: 100000;
     }
     .sy_fslide{
-    	width: 1.1rem;height: 100%;
+        width: 0.8rem;height: 0.6rem;
+        margin: 0.14rem 0.2rem;
+        /*width: 1.1rem;height: 100%;*/
     }
     .sy_fslide:nth-child(1){
-        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
+        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center/cover;
     }
-    .sy_fslide:nth-last-child(1){
+    .sy_fslide:nth-child(3){
         background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
     }
     .sy_fcenter{
