--- a/pages/recharge/recharge.css
+++ b/pages/recharge/recharge.css
@@ -12,12 +12,14 @@ body{
     	z-index: 100000;
     }
     .sy_fslide{
-    	width: 1.1rem;height: 100%;
+        width: 0.8rem;height: 0.6rem;
+        margin: 0.14rem 0.2rem;
+        /*width: 1.1rem;height: 100%;*/
     }
     .sy_fslide:nth-child(1){
-        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
+        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center/cover;
     }
-    .sy_fslide:nth-last-child(1){
+    .sy_fslide:nth-child(3){
         background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
     }
     .sy_fcenter{
@@ -65,41 +67,44 @@ body{
         margin-top: -0.01rem;
     }
     .sy_surcenter{
-        width: 2.9rem;height: 100%;
+        width: 3.4rem;height: 100%;
         margin: 0 auto;
         overflow: hidden;
-        background: red;
     }
     .sy_smoney{
-        width: 100%;height: 0.8rem;
-        background: blue;
+        width: auto;height: 1.3rem;
         text-align: center;
         line-height: 0.8rem;
-        margin-top: 0.6rem;
+        padding: 0.5rem 0.8rem 0 0.8rem;
+        box-sizing:border-box;
         position: relative;
+        background: url(../../images/sy_images/sy_retbg.png) no-repeat center/cover;
     }
     .sy_smoney span{
         font-size: 0.6rem;
+        color: #333;
     }
     .sy_stitle{
-        width: 100%;height: 0.6rem;
-        background: yellow;
+        overflow: hidden;
+        width: 100%;height: auto;
         text-align: center;
     }
     .sy_stitle p{
         font-size: 0.34rem;
+        color: #666;
     }
     .sy_stitle span{
         text-transform: uppercase;
         font-size: 0.16rem;
         display: block;
         margin-top: -0.05rem;
+        color: #999;
     }
     .sy_snew{
         width: 0.33rem;height: 0.33rem;
         position: absolute;
-        bottom: 0.16rem;right: 0.9rem;
-        background: purple;
+        bottom: 0.16rem;right: 0.5rem;
+        background: url(../../images/sy_images/sy_surbg.png) no-repeat center/cover;
     }
 /*请选择充值金额*/
     .sy_rselect{
@@ -107,7 +112,7 @@ body{
         margin: 0.2rem auto;
     }
     .sy_rstitle{
-        width: 100%;height: 0.6rem;
+        width: 100%;height: auto;
     }
     .sy_rettop{
         width: 100%;height: auto;
@@ -125,7 +130,6 @@ body{
     .sy_rstitle span{
         text-transform: uppercase;
         font-size: 0.16rem;
-        margin-top: -0.05rem;
         float: left;
         color: #999;
     }
@@ -142,10 +146,10 @@ body{
         background: #EC9F33;
         border-radius: 0.05rem;
         float: left;
-        margin-top: 0.08rem;
+        margin-top: 0.11rem;
         margin-left: 0.02rem;
     }
-
+/*选择*/
     .sy_rsul{
         width: 7.02rem;height: auto;
         margin: 0.2rem auto;
@@ -159,46 +163,46 @@ body{
     .sy_rslist{
         width: 3.1rem;height: 100%;
         border:0.01rem solid #fff;
+        padding: 0.3rem 0.6rem 0.2rem 0.6rem;
         box-sizing:border-box;
         border-radius: 0.1rem;
-        background: url(../../images/sy_images/sy_bg.png) no-repeat right/cover;
+        background: url(../../images/sy_images/sy_bg1.png) no-repeat right/cover;
     }
     .sy_relitop{
-        width: 100%;height: auto;
+        width: auto;height: auto;
         overflow: hidden;
     }
     .sy_relibottom{
-        width: 100%;height: auto;
+        width: auto;height: auto;
         overflow: hidden;
+        text-align: center;
     }
     .sy_rslist p{
-        font-size: 0.34rem;
-        float: left;
+        font-size: 0.4rem;
+        float: right;
         color: #666;
+        font-weight: bold;
     }
     .sy_rslist span{
         text-transform: uppercase;
-        font-size: 0.16rem;
+        font-size: 0.24rem;
         margin-top: -0.05rem;
-        float: left;
+        /*float: right;*/
         color: #999;
+        text-align: center;
     }
     .sy_reliminp{
+        width: 0.3rem;height: 0.3rem;
+        /*background: #01BC13;*/
+        float: right;
+        margin-top: 0.1rem;
+        margin-left: 0.02rem;
+    }
+    /*.sy_relimins{
         width: 0.3rem;height: 0.05rem;
-        background: #01BC13;
-        border-radius: 0.05rem;
-        float: left;
-        margin-top: 0.35rem;
+        float: right;
         margin-left: 0.02rem;
-    }
-    .sy_relimins{
-        width: 0.4rem;height: 0.05rem;
-        background: #EC9F33;
-        border-radius: 0.05rem;
-        float: left;
-        margin-top: 0.08rem;
-        margin-left: 0.02rem;
-    }
+    }*/
 
 /*温馨提示*/
     .sy_rwalert{
