--- a/pages/me/me.css
+++ b/pages/me/me.css
@@ -1,22 +1,80 @@
-body{
-    background: #eaeaea;
+.ld_backcard_up{
+    display:none;
 }
-/*固定*/
-    .sy_fix{
-    	width: 100%;height: 0.88rem;
-    	position: fixed;
-    	left: 0;top: 0;
-    	background: rgba(0,0,0,0.5);
+.yhp_bankcard_up{
+    background:rgba(0, 0, 0, 0.5);
+}
+.yhp_bankcard_titleup,.yhp_bankcard_titlebot{
+    color:#fff;
+}
+.yhp_bankcard_back{
+    background: url(../../images/sy_images/sy_backbtn.gif) no-repeat 0 center;
+}
+.yhp_bankcard_search{
+    display:none;
+    /*background: url(../../images/ld_images/ld_top_right.png) no-repeat center center;*/
+}
+/*banner下面小轮播*/
+    
+    .ld_pluul{
+    	width: 7.02rem;height: auto;
+    	margin: 0 auto;
     	display: flex;
-    	justify-content:space-between;
-    	z-index: 100000;
+    	justify-content:space-around;
+    	flex-wrap:wrap;
+    }
+    .ld_pluli{
+        height: 1.36rem;
+    	box-shadow: 0 0 0.05rem #666;
+    	border-radius: 0.05rem;
+    	overflow: hidden;
+    	background: url(../../images/sy_images/sy_bg.png) no-repeat center/cover;
+    }
+    .ld_pluli_img{
+    	width: 1.3rem;height: 100%;
+    	float: left;
+    }
+    .ld_pluli_right{
+    	float: left;
+    	margin-top: 0.14rem;
+    	margin-left: 0.25rem;
+    }
+    .ld_pluli_Word{
+    	font-size: 0.26rem;
+    	color: #1ac194;
+    	line-height: 0.25rem;
+    	text-transform: uppercase;
+    	letter-spacing: 0.01rem;
+    	font-weight: bold;
+    }
+    .ld_pluli_Word span{
+    	color: #333;
+    }
+    .ld_pluli_p{
+    	font-size: 0.18rem;
+    	color: #2b9ceb;
+    	margin-top: 0.05rem;
+    }
+    .ld_san_dian{
+    	margin-left: 0.05rem;
+    	margin-top: -0.05rem;
+    	font-size: 0.24rem;
+    	line-height: 0.2rem;
+    }
+/*banner下面小轮播结束*/
+    /**/
+    /*固定*/
+    .sy_fix{
+        width: 100%;height: 0.88rem;
+        position: fixed;
+        left: 0;top: 0;
+        background: #2975FF;
+        display: flex;
+        justify-content:space-between;
+        z-index: 100000;
     }
     .sy_fslide{
-    	width: 1.1rem;height: 100%;
-    }
-    .sy_fslide a{
-        display:block;
-        width:100%;height:100%;
+        width: 1.1rem;height: 100%;
     }
     .sy_fslide:nth-child(1){
         background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center;
@@ -25,136 +83,352 @@ body{
         background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
     }
     .sy_fcenter{
-    	height: 100%;flex-grow:1;
-    	font-size: 0.36rem;
-    	color: #fff;
-    	line-height: 0.88rem;
-    	text-align: center;
+        height: 100%;flex-grow:1;
+        font-size: 0.36rem;
+        color: #fff;
+        line-height: 0.88rem;
+        text-align: center;
     }
     .sy_fcenter b{
-    	font-size: 0.36rem;
-    	color: #fff;
+        font-size: 0.36rem;
+        color: #fff;
+    }
+/*留白块*/
+    .sy_empty{
+        width: 100%;height: 0.9rem;
+        background: #2975FF;
     }
 /*banner*/
     .sy_banner{
-    	width: 100%;height: 5.4rem;
-    	background: url(../../images/sy_images/sy_person_bg.png) no-repeat center/cover;
-    	position: relative;
-    	margin-bottom: 0.4rem;
+        width: 100%;height: 5.6rem;
+        background: url(../../images/sy_images/sy_person_bg.png) no-repeat center/cover;
+        position: relative;
+        margin-bottom: 0.4rem;
     }
     .sy_delsan{
-		width:0;            
-		height:0; 
-		border-top-width:0.75rem;
-		border-right-width:3.75rem;
-		border-bottom-width:0.75rem;
-		border-left-width:3.75rem;
-		border-style:solid;            
-		border-color: transparent #eaeaea #eaeaea transparent;
-		position: absolute;
-		right: 0;bottom: 0;
+        width:0;            
+        height:0; 
+        border-top-width:0.75rem;
+        border-right-width:3.75rem;
+        border-bottom-width:0.75rem;
+        border-left-width:3.75rem;
+        border-style:solid;            
+        border-color: transparent #eaeaea #eaeaea transparent;
+        position: absolute;
+        right: 0;bottom: -0.01rem;
     }
     .sy_header_imgbox{
-    	width: 2.3rem;height: 2.1rem;
-    	background: url(../../images/sy_images/sy_person.png) no-repeat center/cover;
-    	position: absolute;
-    	left: -1.15rem;bottom: -1.05rem;
+        width: 2.3rem;height: 2.1rem;
+        background: url(../../images/sy_images/sy_person.png) no-repeat center/cover;
+        position: absolute;
+        left: -1.15rem;bottom: -1.05rem;
     }
     .sy_header_img{
-    	width: 1.6rem;height: 1.6rem;
-    	background: url(../../images/sy_images/sy_ld.jpg) no-repeat center/cover;
-    	position: absolute;
-    	left: 0.05rem;bottom: 0.06rem;top: 0;right: 0;
-    	margin: auto;
-    	border:2px solid #fff;
-    	border-radius: 50%;
+        width: 1.6rem;height: 1.6rem;
+        background: url(../../images/sy_images/sy_ld.jpg) no-repeat center/cover;
+        position: absolute;
+        left: 0.05rem;bottom: 0.06rem;top: 0;right: 0;
+        margin: auto;
+        border:2px solid #fff;
+        border-radius: 50%;
+    }
+  /*红心*/
+    .sy_heat{
+        width: 1.6rem;height: 0.8rem;
+        border-radius: 0.8rem;
+        border: 1px solid rgba(255,255,255,0.5);
+        background: rgba(0,0,0,0.5);
+        position: absolute;
+        top: 1.2rem;right: 0.2rem;
+        line-height: 0.8rem;
+    }
+    .sy_xin{
+        width: 0.4rem;height: 0.4rem;
+        margin: 0.2rem 0.1rem 0.2rem 0.25rem;
+        position: relative;
+        float: left;
+    }
+    .sy_xin img{
+        width: 100%;
+        position: absolute;
+        left: 0;top: 0;right: 0;bottom: 0;
+        margin: auto;
+    }
+    .sy_heat span{
+        font-size: 0.26rem;
+        color: #fff;
     }
 /*换个签名吧*/
     .sy_qmbox{
-    	width: 100%;height: 1rem;
+        width: 100%;height: 1rem;
+        width: 100%;height: auto;
         text-align: center;
         margin: 0.2rem 0;
     }
-    .sy_qmbox p{
-    	font-size: 0.26rem;
+    .sy_qmbox p{}
+    .sy_qmp{
+        height: 0.5rem;line-height: 0.5rem;
+    }
+    .sy_qmp span{
+        height: 0.5rem;
+        /*display: inline-block;*/
+        font-size: 0.26rem;
         color:#333;
     }
+    .sy_dist{
+        display: inline-block;
+        width: 0.5rem;height: 0.5rem;
+        vertical-align: middle;
+        margin-top: -0.08rem;
+        position: relative;
+    }
+    .sy_dist img{
+        height: 100%;
+        position: absolute;
+        left: 0;top: 0;bottom: 0;right: 0;
+        margin: auto;
+    }
     .sy_xian_img{
-    	width: 100%;height: 0.03rem;
-    	margin: 0.12rem 0;
-    	background: url(../../images/sy_images/sy_dian.png) no-repeat center;
+        width: 0.41rem;height: 0.03rem;
+        margin: 0.12rem auto;
+        background: url(../../images/sy_images/sy_dian.png) no-repeat center/cover;
     }
     .sy_five{
-    	width: 100%;height: 0.35rem;
-    	background: url(../../images/sy_images/sy_stars.png) no-repeat center;
+        width: 1.64rem;height: 0.4rem;
+        margin: 0 auto;
+        overflow: hidden;
+        background: url(../../images/sy_images/sy_stars.png) no-repeat center/cover;
     }
-/*好友主页的轮播块*/
-    .sy_pluul{
-    	width: 7.02rem;height: auto;
-    	margin: 0 auto;
-    	display: flex;
-    	justify-content:space-around;
-    	flex-wrap:wrap;
+/*友情链接*/
+    .sy_help_box{
+        width: 7.02rem;height: 1.4rem;
+        margin: 0.2rem auto;
+        display: flex;
+        justify-content:space-between;
+        background: url(../../images/sy_images/sy_help_bg.png) no-repeat center/cover; 
+        padding: 0.2rem;
+        box-sizing:border-box;
+        border-radius: 0.1rem;
     }
-    .sy_pluli{
-        height: 1.36rem;
-    	box-shadow: 0 0 0.05rem #666;
-    	border-radius: 0.05rem;
-    	overflow: hidden;
-    	background: url(../../images/sy_images/sy_bg.png) no-repeat center/cover;
+    .sy_help_lis{
+        text-align: center;
+        width: auto;
     }
-    .sy_pluli_img{
-    	width: 1.3rem;height: 100%;
-    	float: left;
+    .sy_htop{
+        width: 100%;
+        height: 0.45rem;
+        position: relative;
     }
-    /*.sy_pluli:nth-child(1) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_htop img{
+        height: 100%;
+        position: absolute;
+        left: 0;top: 0;right: 0;bottom: 0;
+        margin: auto;
     }
-    .sy_pluli:nth-child(2) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_2.png) no-repeat center;
+    .sy_hbottom{
+        height: 0.55rem;
+        padding: 0 0.05rem;
+        box-sizing:border-box;
     }
-    .sy_pluli:nth-child(3) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_hbottom p{
+        font-size: 0.24rem;
+        color: #333;
     }
-    .sy_pluli:nth-child(4) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_hbottom span{
+        height: auto;
+        font-size: 0.21rem;
+        color: #666;
+        display: block;
+        margin-top: -0.03rem;
+        text-transform: uppercase;
     }
-    .sy_pluli:nth-child(5) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_hborder{
+        width: 100%;height: 0.01rem;
+        background: #1F82F7;
+        padding: 0 0.05rem;
+        box-sizing:border-box;
+        background-clip: content;
     }
-    .sy_pluli:nth-child(6) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_hborder:before{
+        width: 0.03rem;height: 0.03rem;
+        content: "";
+        display: block;
+        float: left;
+        margin-left: -0.1rem;
+        margin-top: -0.01rem;
+        background: #1F82F7;
+        border-radius: 50%;
     }
-    .sy_pluli:nth-child(7) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
+    .sy_hborder:after{
+        width: 0.03rem;height: 0.03rem;
+        content: "";
+        display: block;
+        float: right;
+        margin-right: -0.1rem;
+        margin-top: -0.01rem;
+        background: #1F82F7;
+        border-radius: 50%;s
     }
-    .sy_pluli:nth-child(8) .sy_pluli_img{
-        background: url(../../images/sy_images/sy_mjh_1.png) no-repeat center;
-    }*/
-    .sy_pluli_right{
-    	float: left;
-    	margin-top: 0.14rem;
-    	margin-left: 0.25rem;
+/*个人主页的设置*/
+    .sy_settimg_box{
+        width: 7.02rem;height: auto;
+        margin: 0.2rem auto;
     }
-    .sy_pluli_Word{
-    	font-size: 0.26rem;
-    	color: #1ac194;
-    	line-height: 0.25rem;
-    	text-transform: uppercase;
-    	letter-spacing: 0.01rem;
-    	font-weight: bold;
+    .sy_setting_li{
+        width: 100%;height: 1rem;  
+        margin: 0.1rem 0;
+        padding: 0.08rem;
+        box-sizing:border-box; 
+        background: #fff;
+        border-radius: 0.1rem;
+        box-shadow: 0 0 0.05rem rgba(0,0,0,0.2);
+        display: flex;
     }
-    .sy_pluli_Word span{
-    	color: #333;
+    .sy_set_leftimg{
+        width: 0.8rem;height: 0.8rem;
+        margin: 0.02rem 0;
+        border-radius: 50%;
+        overflow: hidden;
+        float: left;
+        background: #121643;
+        position: relative;
     }
-    .sy_pluli_p{
-    	font-size: 0.18rem;
-    	color: #2b9ceb;
-    	margin-top: 0.05rem;
+    .sy_set_leftimg img{
+        position: absolute;
+        left: 0;top: 0;right: 0;left: 0;
+        margin: auto;
     }
-    .sy_san_dian{
-    	margin-left: 0.05rem;
-    	margin-top: -0.05rem;
-    	font-size: 0.24rem;
-    	line-height: 0.2rem;
+    .sy_set_conbox{
+        width: 4.8rem;
+        padding-left: 0.2rem;
+        padding-top: 0.04rem;
+        box-sizing:border-box;
+        flex-grow:1;
+        overflow: hidden;
+    }
+    .sy_set_border{
+        width: 2.2rem;height: 0;
+        float: left;
+        margin-left: 0.05rem;
+        border-top: 0.01rem dashed #D5D5D5;
+    }
+    .sy_set_border:before{
+        content: "";
+        display: block;
+        width: 0.03rem;height: 0.03rem;
+        border-radius: 50%;
+        float: left;
+        margin-left: -0.05rem;
+        margin-top: -0.02rem;
+        background: #626262;
+    }
+    .sy_set_border:after{
+        content: "";
+        display: block;
+        width: 0.03rem;height: 0.03rem;
+        border-radius: 50%;
+        float: right;
+        margin-right: -0.05rem;
+        margin-top: -0.02rem;
+        background: #626262;
+    }
+    .sy_setright{
+        width: 1.1rem;height: 100%;
+        float: right;
+        text-align: right;
+        position: relative;
+    }
+    .sy_set_top{
+        font-size: 0.3rem;
+        color: #666;
+        float: left;
+        width: 100%;
+    }
+    .sy_set_bottom{
+        font-size: 0.22rem;
+        color: #999;
+        float: left;
+        width: 100%;
+    }
+    .sy_setrght_con{
+        width: 0.5rem;height: 0.5rem;
+        border-radius: 50%;
+        background: #F0F0F0;
+        border: 0.01rem solid #DDDDDD;
+        box-sizig:border-box;
+        position: absolute;
+        top: 0;right: 0.1rem;bottom: 0;
+        margin: auto;
+    }
+    .sy_setrght_con img{
+        position: absolute;
+        left: 0;top: 0;right: 0;bottom: 0;
+        margin: auto;
+    }
+    .sy_setting_li:nth-child(3) .sy_setrght_con{
+        width: 1rem;height: 0.5rem;
+        border-radius: 0.5rem;
+        background: #1CA650;
+        border: 0.01rem solid #DDDDDD;
+        padding: 0.05rem;
+        box-sizing:border-box;
+        position: relative;
+        margin-top: 0.17rem;
+        margin-right: 0;
+    }
+    .sy_setrght_con-active{
+        width: 0.54rem;height: 0.38rem;
+        background: url(../../images/sy_images/sy_item06.png) no-repeat center/cover;
+        position: absolute;
+        left: 0.05rem;top: 0.05rem;
+        border-radius: 0.38rem;
+        display: block;
+    }
+/*退出登录*/
+    .sy_quit{
+        width: 6.8rem;height: 1rem;
+        margin: 0.6rem auto;
+        background: #2975FF;
+        text-align: center;
+        overflow: hidden;
+        border-radius: 0.05rem;
+    }
+    .sy_hquit{
+        width: 2.2rem;height: 100%;
+        margin: 0.09rem auto;
+    }
+    .sy_hquit p{
+        font-size: 0.34rem;
+        color: #fff;
+        font-weight: normal;
+    }
+    .sy_hquit span{
+        font-size: 0.24rem;
+        color: #000;
+        opacity: 0.3;
+        text-transform: uppercase;
+        margin-top: -0.02rem;
+        display: block;
+    }
+    .sy_qborder{
+        width: 100%;height: 0.05rem;
+    }
+    .sy_qborder:before{
+        content: "";
+        display: block;
+        float: left;
+        width: 0.14rem;height: 100%;
+        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
+    }
+    .sy_qborder:after{
+        content: "";
+        display: block;
+        float: right;
+        width: 0.14rem;height: 100%;
+        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
+    }
+/*底留白*/
+    .sy_bbottom{
+        width: 100%;height: 1rem;
+        /*background: yellow;*/
     }
