--- a/pages/zhanghu/yhp_passpay/yhp_passpay.css
+++ b/pages/zhanghu/yhp_passpay/yhp_passpay.css
@@ -165,7 +165,7 @@
 		letter-spacing: 0.6rem;	
 		margin-top: 0.25rem;
 		margin-bottom: 0.38rem;
-
+		background-size: 4.68rem 0.08rem;
 	}
 /*输入密码结束*/
 /*密码支付提示语结束*/
