--- a/pages/me/me.css
+++ b/pages/me/me.css
@@ -37,6 +37,9 @@
     	width: 1.3rem;height: 100%;
     	float: left;
     }
+    .ld_pluli_img img{
+        width:100%;
+    }
     .ld_pluli_right{
     	float: left;
     	margin-top: 0.14rem;
