--- a/pages/me/recharge/recharge.css
+++ b/pages/me/recharge/recharge.css
@@ -1,6 +1,4 @@
-body{
-    background: #eaeaea;
-}
+
 /*固定*/
     .sy_fix{
     	width: 100%;height: 0.88rem;
@@ -17,10 +15,10 @@ body{
         /*width: 1.1rem;height: 100%;*/
     }
     .sy_fslide:nth-child(1){
-        background: url(../../images/sy_images/sy_backbtn.gif) no-repeat center/cover;
+        background: url(../../../images/sy_images/sy_backbtn.gif) no-repeat center/cover;
     }
     .sy_fslide:nth-child(3){
-        background: url(../../images/sy_images/sy_navbtn.png) no-repeat center;
+        background: url(../../../images/sy_images/sy_navbtn.png) no-repeat center;
     }
     .sy_fcenter{
     	height: 100%;flex-grow:1;
@@ -78,7 +76,7 @@ body{
         padding: 0.5rem 0.8rem 0 0.8rem;
         box-sizing:border-box;
         position: relative;
-        background: url(../../images/sy_images/sy_retbg.png) no-repeat center/cover;
+        background: url(../../../images/sy_images/sy_retbg.png) no-repeat center/cover;
     }
     .sy_smoney span{
         font-size: 0.6rem;
@@ -104,7 +102,7 @@ body{
         width: 0.33rem;height: 0.33rem;
         position: absolute;
         bottom: 0.16rem;right: 0.5rem;
-        background: url(../../images/sy_images/sy_surbg.png) no-repeat center/cover;
+        background: url(../../../images/sy_images/sy_surbg.png) no-repeat center/cover;
     }
 /*请选择充值金额*/
     .sy_rselect{
@@ -166,7 +164,7 @@ body{
         padding: 0.3rem 0.6rem 0.2rem 0.6rem;
         box-sizing:border-box;
         border-radius: 0.1rem;
-        background: url(../../images/sy_images/sy_bg1.png) no-repeat right/cover;
+        background: url(../../../images/sy_images/sy_bg1.png) no-repeat right/cover;
     }
     .sy_relitop{
         width: auto;height: auto;
@@ -251,17 +249,12 @@ body{
         display: block;
         float: left;
         width: 0.14rem;height: 100%;
-        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
+        background: url(../../../images/sy_images/sy_out_left.png) no-repeat center/cover;
     }
     .sy_qborder:after{
         content: "";
         display: block;
         float: right;
         width: 0.14rem;height: 100%;
-        background: url(../../images/sy_images/sy_out_left.png) no-repeat center/cover;
-    }
-/*底留白*/
-    .sy_bbottom{
-        width: 100%;height: 1rem;
-        /*background: yellow;*/
+        background: url(../../../images/sy_images/sy_out_left.png) no-repeat center/cover;
     }
