--- a/pages/me/yhp_member/yhp_member.css
+++ b/pages/me/yhp_member/yhp_member.css
@@ -3,7 +3,7 @@
 		width: 100%;
 		height: auto;
 		margin: 0 auto;
-		background: #EAEAEA;
+		background: #eaeaea;
 	}
 	
 /*会员中心头部开始*/
@@ -78,7 +78,9 @@
 		height: 2.33rem;
 		display: flex;
 		align-items:center;
-		margin-left: 0.24rem;
+		padding-left: 0.24rem;
+		box-sizing:border-box;
+		background: #eaeaea;
 	}
 	.yhp_innerup_bg{
 		background:url(../../../images/sy_images/sy_person.png) no-repeat center;
@@ -246,6 +248,46 @@
 		letter-spacing: 0.02rem;
 		padding-bottom: 0.50rem;
 	}
+
+	.yhp_member_surebtn{
+		width: 100%;
+		height:2.00rem;
+		background:#fff;
+		display: flex;
+		align-items:center;
+
+	}
+
+	.yhp_regsucbtn{
+			width: 2.45rem;
+			height: 1.03rem;
+			background: #31363A;
+			border-radius: 0.60rem;
+			margin: 0 auto;
+			margin-top: 0.52rem;
+			border: 0.03rem solid #fff;	
+			padding-bottom: 0.40rem;
+			margin-bottom: 0.40rem;
+		}
+		.yhp_regsucbtn:after{
+			content: "";
+			display: block;
+			clear: both;
+		}
+		.yhp_regsucbtn .yhp_regsucsure{
+			width: 2.33rem;
+			height: 0.90rem;
+			background: #1EFD23 url("../../../images/yhp_images/yhp_loginfailspoint.png") no-repeat center;
+			background-size: 1.99rem 0.12rem;
+			border: none;
+			border-radius: 0.60rem;
+			margin-top: 0.03rem;
+			margin-left: 0.03rem;
+			float: left;
+			color: #fff;
+			font-size: 0.30rem;
+			outline: none;
+		}
 /*会员中心主体结束*/
 
 /*会员中心外框结束
