--- a/pages/bookcover/bookcover.css
+++ b/pages/bookcover/bookcover.css
@@ -435,4 +435,7 @@
     background-size: .39rem .32rem;
     margin:-.4rem .2rem 0 0;
 }
+.gl_plpl.active1{
+    background:url(../../images/gl_images/zlf_xin_06.png) no-repeat center;
+}
 /*同类推荐结束*/
