--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-05 13:37:54
+* @Last Modified time: 2017-01-05 19:17:08
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -16,6 +16,7 @@
     position:fixed;
     left:0;top:0;
     z-index: 100;
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 }
 .ld_sqtopbar_di{
     width:100%;height:.88rem;
