--- a/pages/zhanghu/yhp_bankcard/yhp_bankcard.css
+++ b/pages/zhanghu/yhp_bankcard/yhp_bankcard.css
@@ -23,6 +23,7 @@
 		z-index: 100;
 		display:flex;
 		justify-content: space-between;
+		box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
 	}
 	.yhp_bankcard_up:after{
 		content: "";
