--- a/css/public.css
+++ b/css/public.css
@@ -8,6 +8,9 @@ a{
 * img{
 	border:none;
 }
+a,button,input{
+   -webkit-tap-highlight-color:rgba(255,0,0,0);
+}
 body,p,pre,ul,ol,li,form,button,a,table,dd,input,h1,h2,h3,h4,h5,h6{
 	margin:0;
 	padding:0;
