--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -101,6 +101,7 @@ img{
     font-size:.3rem;color:#4b4c4c;
     line-height: .4rem;
     margin-left: .1rem;
+    margin-top: .1rem;
 }
 .mjh-sh-sm{
     font-size:.24rem;color:#595a5a;
