--- a/pages/bookcover/bookcover.css
+++ b/pages/bookcover/bookcover.css
@@ -2,7 +2,7 @@
 /* @Author: guanlin
 * @Date:   2016-12-29 11:54:43
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-05 22:58:57
+* @Last Modified time: 2017-01-06 00:30:12
 */
 
 #gl_warp{
@@ -146,6 +146,10 @@
     line-height: 0.36rem;
     font-size: 0.2rem;
     color:#b2b3b4;
+}
+.ld_gl_che{
+  display:block;
+  width:100%;height:100%;
 }
 .gl_engl{
     display:block;
