--- a/pages/home/home.css
+++ b/pages/home/home.css
@@ -221,6 +221,7 @@ img{
     position:fixed;
     bottom:0;left:0;
     z-index:100;
+   box-shadow: 0 -1px 2px rgba(0, 0, 0, 0.2);
 }
 .mjh-sy-tab a{
     display:block;
