--- a/pages/search/yhp_searchfail/yhp_searchfail.css
+++ b/pages/search/yhp_searchfail/yhp_searchfail.css
@@ -196,11 +196,15 @@
 	}
 	.yhp_searchfail_tjc{
 		width: 6.89rem;
-		height: 3.86rem;
+		height: 3rem;
 		background:#fff;
-		margin: 0 auto;
-		margin-top: 0.06rem;
+		margin-top: .2rem;
 		box-shadow: 0 0 0.02rem 0.01rem #d4d3d3;
+		display:flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+		padding:.4rem;
+		box-sizing: border-box;
 	}
 	..yhp_searchfail_tjc:after{
 		content: "";
@@ -209,11 +213,11 @@
 	}
 	.yhp_searchfail_tjclabel{
 		display: block;
-		width: 20%;
+		width:2rem;
 		float: left;
 		height: 0.32rem;
 		display: flex;
-		margin: 0.20rem 0.44rem;
+		box-sizing: border-box;
 	}
 	.yhp_searchfail_tjcinput{
 		width: 0.15rem;
