--- a/pages/shujia/shujia.css
+++ b/pages/shujia/shujia.css
@@ -40,6 +40,10 @@
     position:relative;
     margin-right: .24rem;
 }
+.ld_zlf_item{
+    display:block;
+    width:100%;height:100%;
+}
 .zlf_cover{
     height:5rem;
     width:100%;
