--- a/pages/bookcover/bookcover.css
+++ b/pages/bookcover/bookcover.css
@@ -2,7 +2,7 @@
 /* @Author: guanlin
 * @Date:   2016-12-29 11:54:43
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-06 00:30:12
+* @Last Modified time: 2017-01-05 10:01:23
 */
 
 #gl_warp{
@@ -146,10 +146,6 @@
     line-height: 0.36rem;
     font-size: 0.2rem;
     color:#b2b3b4;
-}
-.ld_gl_che{
-  display:block;
-  width:100%;height:100%;
 }
 .gl_engl{
     display:block;
@@ -417,7 +413,7 @@
     background-size: .34rem .17rem;
 }
 .gl_nnbottom p{
-  font-size: .28rem;
+  font-size: .18rem;
   color: rgb( 89, 90, 90 );
   line-height: 2;
 }
@@ -439,7 +435,8 @@
     background-size: .39rem .32rem;
     margin:-.4rem .2rem 0 0;
 }
-.gl_plpl.active1{
-    background:url(../../images/gl_images/zlf_xin_06.png) no-repeat center;
+.gl_plpl.active{
+    background:url(../../images/gl_images/zlf_xin_06.png) no-repeat;
+    background-size: .39rem .32rem;
 }
 /*同类推荐结束*/
