--- a/pages/shequ/shequ.css
+++ b/pages/shequ/shequ.css
@@ -2,7 +2,7 @@
 * @Author: Marte
 * @Date:   2016-12-29 13:45:24
 * @Last Modified by:   Marte
-* @Last Modified time: 2017-01-05 13:37:54
+* @Last Modified time: 2017-01-06 16:44:52
 */
 /*社区顶部开始*/
 .ld_sqtopbar{
@@ -360,14 +360,22 @@ li.ld_qz_labelzan{
 /*社区圈子结束*/
 
 /*社区书友开始*/
+.ld_blocka{
+    display:block;
+    width:100%;height:100%;
+    /*width:100%;height:1.17rem;*/
+    padding:.1rem;
+    display:flex;
+    align-items: center;
+}
 .ld_shuyou{
-    width:100%;height:1.17rem;
+    /*width:100%;height:1.17rem;*/
     background:#fff;
     border-radius:.06rem;
     margin-bottom:.13rem;
-    display:flex;
-    align-items: center;
-    padding:.1rem;
+    /*display:flex;
+    align-items: center;*/
+    /*padding:.1rem;*/
     box-sizing: border-box;
 }
 .ld_sy_photo{
@@ -413,24 +421,33 @@ span.ld_sy_circle2{
     background:#f0f0f0;
     border:1px solid #d5d5d5;
     font-size:.22rem;
+    text-align:center;line-height: .31rem;
+    color:#6f6f6f;
 }
 .ld_sy_num a{
+   /* display:block;
+    width:100%;height:100%;
+    text-align:center;line-height: .26rem;*/
+    color:#fff;
+}
+/*.ld_sy_num a{
     display:block;
     width:100%;height:100%;
     text-align:center;line-height: .26rem;
     color:#6f6f6f;
-}
+}*/
 .ld_sy_numactive{
     width:.73rem;height:.41rem;
     border-radius:.5rem;
     background:#ff3469;
     color:#fff;
     border:0;
-}
-.ld_sy_numactive a{
-    color:#fff;
     text-align:center;line-height: .41rem;
 }
+/*.ld_sy_numactive a{
+    color:#fff;
+    text-align:center;line-height: .41rem;
+}*/
 /*搜索*/
 .ld_sy_search{
     width:100%;height:.92rem;
